test/errors/value/int/tostr-format.yasl

echo mt.lookup(0, .tostr)(16, 'a')
